@@ -1,2 +1,3 @@
 ADD_SUBDIRECTORY(listnames)
+ADD_SUBDIRECTORY(pingpong)
 
